# realtime-md-eval

./: .gitignore  LICENSE  README.md  RESUME.md  config.example.yaml  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: README.md  collector.service  digest.service  digest.timer  remote.sh
docs/: DESIGN.md
docs/research/: strategy-analysis.md
examples/: run_eval.py  run_feed.py  run_scanner.py
rtmde/: __init__.py  config.py
rtmde/eval/: __init__.py  harness.py  report.py  strategy.py
rtmde/feed/: __init__.py  client.py  ws.py
rtmde/notify/: __init__.py  digest.py
rtmde/scanner/: __init__.py  arb.py
tests/: test_client.py  test_config.py  test_feed.py  test_harness.py  test_notify.py  test_report.py  test_scanner.py  test_strategy.py
