[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-md-eval"
version = "0.1.0"
description = "Real-time market-data ingestion + offline strategy-evaluation system (Polymarket CLOB as the data source)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Owen Zhang" }]
keywords = ["websocket", "market-data", "real-time", "ingestion", "strategy-evaluation", "systemd"]
dependencies = [
    "websockets>=12",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
# Live order placement is OPTIONAL and off by default. Only needed if you wire up
# the LiveBroker; it is imported lazily so the rest of the package stays keyless.
live = ["py-clob-client"]

[tool.setuptools.packages.find]
include = ["rtmde*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
